--- a/idea/i18n/pl.po
+++ b/idea/i18n/pl.po
@@ -8,14 +8,14 @@ msgstr ""
 "Project-Id-Version: openobject-addons\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2013-06-07 19:37+0000\n"
-"PO-Revision-Date: 2012-12-21 23:00+0000\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
+"PO-Revision-Date: 2013-11-16 20:32+0000\n"
+"Last-Translator: Mirosław Bojanowicz <miroslaw.bojanowicz@gmail.com>\n"
 "Language-Team: Polish <pl@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2013-07-11 06:04+0000\n"
-"X-Generator: Launchpad (build 16696)\n"
+"X-Launchpad-Export-Date: 2013-11-17 05:45+0000\n"
+"X-Generator: Launchpad (build 16831)\n"
 
 #. module: idea
 #: view:idea.category:0
@@ -26,7 +26,7 @@ msgstr "Kategoria"
 #. module: idea
 #: view:idea.idea:0
 msgid "In Progress"
-msgstr ""
+msgstr "W toku"
 
 #. module: idea
 #: view:idea.idea:0
@@ -56,18 +56,18 @@ msgstr "Otwarte pomysły"
 #. module: idea
 #: view:idea.idea:0
 msgid "Group By..."
-msgstr ""
+msgstr "Grupuj wg..."
 
 #. module: idea
 #: field:idea.category,name:0
 msgid "Category Name"
-msgstr ""
+msgstr "Nazwa kategorii"
 
 #. module: idea
 #: view:idea.idea:0
 #: selection:idea.idea,state:0
 msgid "New"
-msgstr ""
+msgstr "Nowy"
 
 #. module: idea
 #: view:idea.idea:0
@@ -93,33 +93,33 @@ msgstr ""
 #. module: idea
 #: field:idea.idea,category_ids:0
 msgid "Tags"
-msgstr ""
+msgstr "Etykiety"
 
 #. module: idea
 #: field:idea.idea,message_unread:0
 msgid "Unread Messages"
-msgstr ""
+msgstr "Nieprzeczytane wiadomości"
 
 #. module: idea
 #: help:idea.idea,message_ids:0
 msgid "Messages and communication history"
-msgstr ""
+msgstr "Wiadomości i historia komunikacji"
 
 #. module: idea
 #: field:idea.idea,message_is_follower:0
 msgid "Is a Follower"
-msgstr ""
+msgstr "Jest obserwatorem"
 
 #. module: idea
 #: model:ir.model,name:idea.model_idea_idea
 msgid "Email Thread"
-msgstr ""
+msgstr "Wątek email"
 
 #. module: idea
 #: view:idea.idea:0
 #: selection:idea.idea,state:0
 msgid "Accepted"
-msgstr ""
+msgstr "Zaakceptowano"
 
 #. module: idea
 #: model:ir.actions.act_window,name:idea.action_idea_category
@@ -130,12 +130,12 @@ msgstr "Kategorie"
 #. module: idea
 #: view:idea.idea:0
 msgid "Refuse"
-msgstr ""
+msgstr "Odmów"
 
 #. module: idea
 #: field:idea.idea,message_ids:0
 msgid "Messages"
-msgstr ""
+msgstr "Wiadomości"
 
 #. module: idea
 #: view:idea.idea:0
