--- a/sale_stock/i18n/fi.po
+++ b/sale_stock/i18n/fi.po
@@ -8,14 +8,14 @@ msgstr ""
 "Project-Id-Version: openobject-addons\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2013-06-07 19:37+0000\n"
-"PO-Revision-Date: 2013-11-08 18:19+0000\n"
+"PO-Revision-Date: 2013-11-16 17:42+0000\n"
 "Last-Translator: Harri Luuppala <Unknown>\n"
 "Language-Team: Finnish <fi@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2013-11-10 06:45+0000\n"
-"X-Generator: Launchpad (build 16820)\n"
+"X-Launchpad-Export-Date: 2013-11-17 05:45+0000\n"
+"X-Generator: Launchpad (build 16831)\n"
 
 #. module: sale_stock
 #: help:sale.config.settings,group_invoice_deli_orders:0
@@ -23,7 +23,7 @@ msgid ""
 "To allow your salesman to make invoices for Delivery Orders using the menu "
 "'Deliveries to Invoice'."
 msgstr ""
-"Sallii myyjien tehdä suoraan toimitusmääräyksistä laskuja valinnalla "
+"Salli myyjien tehdä suoraan toimitusmääräyksistä laskuja valinnalla "
 "'Toimitusten laskutus'."
 
 #. module: sale_stock
@@ -46,7 +46,7 @@ msgstr "Keräilytiedot ! : "
 #. module: sale_stock
 #: model:process.node,name:sale_stock.process_node_packinglist0
 msgid "Pick List"
-msgstr "Keräilylista"
+msgstr "Keräilyluettelo"
 
 #. module: sale_stock
 #: code:addons/sale_stock/sale_stock.py:565
@@ -61,7 +61,7 @@ msgstr ""
 #. module: sale_stock
 #: model:process.node,note:sale_stock.process_node_packinglist0
 msgid "Document of the move to the output or to the customer."
-msgstr "Dokumentti siirrosta kohdepaikkaan tai asiakkalle."
+msgstr "Dokumentti siirrosta kohdepaikkaan tai asiakkaalle."
 
 #. module: sale_stock
 #: field:sale.config.settings,group_multiple_shops:0
@@ -76,7 +76,7 @@ msgstr "Vahvista"
 #. module: sale_stock
 #: view:sale.order:0
 msgid "Cancel Order"
-msgstr ""
+msgstr "Peruuta tilaus"
 
 #. module: sale_stock
 #: code:addons/sale_stock/sale_stock.py:209
@@ -84,7 +84,7 @@ msgstr ""
 msgid ""
 "You must first cancel all delivery order(s) attached to this sales order."
 msgstr ""
-"Peruuta ensin kaikki tähän myyntitilaukseen liittyvät toimitusmääräykset."
+"Peruuta ensin kaikki tähän myyntitilaukseen liittyvät toimitustilaukset."
 
 #. module: sale_stock
 #: model:process.transition,name:sale_stock.process_transition_saleprocurement0
@@ -108,7 +108,7 @@ msgstr ""
 #. module: sale_stock
 #: field:sale.order,picking_policy:0
 msgid "Shipping Policy"
-msgstr "Toimituskäytäntö"
+msgstr "Lähetyssäännöt"
 
 #. module: sale_stock
 #: model:ir.ui.menu,name:sale_stock.menu_action_shop_form
@@ -129,7 +129,7 @@ msgstr "Varastosiirto"
 #: code:addons/sale_stock/sale_stock.py:163
 #, python-format
 msgid "Invalid Action!"
-msgstr ""
+msgstr "Virheellinen toiminto!"
 
 #. module: sale_stock
 #: field:sale.config.settings,module_project_timesheet:0
@@ -210,7 +210,7 @@ msgstr "Pakota luovutus"
 #. module: sale_stock
 #: field:sale.config.settings,default_order_policy:0
 msgid "The default invoicing method is"
-msgstr ""
+msgstr "Laskutuksen oletusmenettely on"
 
 #. module: sale_stock
 #: field:sale.order.line,delay:0
@@ -295,7 +295,7 @@ msgstr "Luodaan laskut perustuen toimitustilauksiiin."
 #. module: sale_stock
 #: field:sale.config.settings,module_delivery:0
 msgid "Allow adding shipping costs"
-msgstr ""
+msgstr "Salli lähetyskulujen lisäys"
 
 #. module: sale_stock
 #: view:sale.order:0
@@ -313,6 +313,8 @@ msgid ""
 "International Commercial Terms are a series of predefined commercial terms "
 "used in international transactions."
 msgstr ""
+"Kansainväliset toimituslausekkeet eli Incoterms on sarja hyväksyttyjä "
+"kaupallisia ehtoja kansainväliseen kaupankäyntiin."
 
 #. module: sale_stock
 #: help:sale.config.settings,module_delivery:0
@@ -327,11 +329,12 @@ msgstr ""
 #: field:sale.config.settings,default_picking_policy:0
 msgid "Deliver all at once when all products are available."
 msgstr ""
+"Kaikki toimitetaan yhdellä kertaa, heti kun jokainen tuote on saatavilla."
 
 #. module: sale_stock
 #: model:res.groups,name:sale_stock.group_invoice_deli_orders
 msgid "Enable Invoicing Delivery orders"
-msgstr ""
+msgstr "Salli laskutus toimitustilauksilta"
 
 #. module: sale_stock
 #: field:res.company,security_lead:0
@@ -348,12 +351,14 @@ msgstr "Myydyn materiaalin hankinta"
 msgid ""
 "Pick 'Deliver each product when available' if you allow partial delivery."
 msgstr ""
+"Valitse \"Toimita kukin saatavilla oleva tuote erikseen "
+"osittaistoimituksena\", jos sallit osittaistoimitukset."
 
 #. module: sale_stock
 #: code:addons/sale_stock/sale_stock.py:208
 #, python-format
 msgid "Cannot cancel sales order!"
-msgstr ""
+msgstr "Myyntitilausta ei voi poistaa!"
 
 #. module: sale_stock
 #: model:ir.model,name:sale_stock.model_sale_shop
@@ -537,7 +542,7 @@ msgstr "Incoterm"
 #: code:addons/sale_stock/sale_stock.py:522
 #, python-format
 msgid "Cannot cancel sales order line!"
-msgstr ""
+msgstr "Myyntitilausriviä ei voi poistaa!"
 
 #. module: sale_stock
 #: model:process.transition.action,name:sale_stock.process_transition_action_cancelassignation0
@@ -562,7 +567,7 @@ msgstr "Liittyvä keräily"
 #. module: sale_stock
 #: model:ir.model,name:sale_stock.model_sale_config_settings
 msgid "sale.config.settings"
-msgstr ""
+msgstr "sale.config.settings"
 
 #. module: sale_stock
 #: help:sale.order,picking_ids:0
@@ -570,6 +575,7 @@ msgid ""
 "This is a list of delivery orders that has been generated for this sales "
 "order."
 msgstr ""
+"Tämä on luetteo toimitustilauksista, jotka on luotu tälle myyntitilaukselle."
 
 #. module: sale_stock
 #: model:process.node,name:sale_stock.process_node_saleorderprocurement0
