--- a/account/i18n/fi.po
+++ b/account/i18n/fi.po
@@ -8,13 +8,13 @@ msgstr ""
 "Project-Id-Version: openobject-addons\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2013-06-14 22:29+0000\n"
-"PO-Revision-Date: 2013-11-16 18:18+0000\n"
+"PO-Revision-Date: 2013-11-17 17:59+0000\n"
 "Last-Translator: Harri Luuppala <Unknown>\n"
 "Language-Team: Finnish <fi@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2013-11-17 05:44+0000\n"
+"X-Launchpad-Export-Date: 2013-11-18 05:52+0000\n"
 "X-Generator: Launchpad (build 16831)\n"
 
 #. module: account
@@ -479,7 +479,7 @@ msgstr "Tilikarttamalli"
 #. module: account
 #: selection:account.invoice.refund,filter_refund:0
 msgid "Modify: create refund, reconcile and create a new draft invoice"
-msgstr "Muokkaa: luo hyvitys, täsmäytä ja luo uusi laskuluonnos"
+msgstr "Muokkaa: luo hyvitys, täsmäytä ja luo uusi laskuehdotus"
 
 #. module: account
 #: help:account.config.settings,tax_calculation_rounding_method:0
@@ -664,7 +664,8 @@ msgid ""
 "Specified journal does not have any account move entries in draft state for "
 "this period."
 msgstr ""
-"Määritellyssä päiväkirjassa ei ole yhtään tälle jaksolle kuuluvaa kirjausta."
+"Määritellyssä päiväkirjassa ei ole yhtään tälle jaksolle kuuluvaa "
+"kirjausehdotusta."
 
 #. module: account
 #: view:account.fiscal.position:0
@@ -1533,7 +1534,7 @@ msgstr "Alkusaldo"
 #. module: account
 #: view:account.invoice:0
 msgid "Reset to Draft"
-msgstr "Palauta luonnokseksi"
+msgstr "Palauta tilaan Ehdotus"
 
 #. module: account
 #: view:account.aged.trial.balance:0
@@ -1568,6 +1569,8 @@ msgid ""
 "And after getting confirmation from the bank it will be in 'Confirmed' "
 "status."
 msgstr ""
+"Kun uusi tiliote luodaan, sen tila on \"Ehdotus\".\n"
+"Kun pankista on saatu vahvistus, tilitooteen tila on \"Vahvistettu\"."
 
 #. module: account
 #: field:account.invoice.report,state:0
@@ -1619,7 +1622,7 @@ msgstr "Saldo ei ole tasan 0"
 msgid ""
 "There is no default debit account defined \n"
 "on journal \"%s\"."
-msgstr ""
+msgstr "Päiväkirjalle \"%s\" ei ole määritelty oletusarvoista Debet-tiliä."
 
 #. module: account
 #: view:account.tax:0
@@ -1629,7 +1632,7 @@ msgstr "Etsi verot"
 #. module: account
 #: model:ir.model,name:account.model_account_analytic_cost_ledger
 msgid "Account Analytic Cost Ledger"
-msgstr ""
+msgstr "Analyyttisen kirjanpidon kustannuspaikka"
 
 #. module: account
 #: view:account.model:0
@@ -1654,6 +1657,8 @@ msgid ""
 "There is nothing to reconcile. All invoices and payments\n"
 "                    have been reconciled, your partner balance is clean."
 msgstr ""
+"Kaikki on täsmäytetty. Jokainen lasku ja maksu \n"
+"                    on täsmäytetty ja kumppanin saldo on nolla."
 
 #. module: account
 #: field:account.chart.template,code_digits:0
@@ -1665,14 +1670,14 @@ msgstr "Desimaalien määrä"
 #. module: account
 #: field:account.journal,entry_posted:0
 msgid "Skip 'Draft' State for Manual Entries"
-msgstr "Ohita 'luonnos' tila käsinsyötetyissä vienneissä"
+msgstr "Ohita tila \"Ehdotus\" manuaalikirjauksissa."
 
 #. module: account
 #: code:addons/account/report/common_report_header.py:92
 #: code:addons/account/wizard/account_report_common.py:164
 #, python-format
 msgid "Not implemented."
-msgstr ""
+msgstr "Ei ole asennettu."
 
 #. module: account
 #: view:account.invoice.refund:0
@@ -1731,7 +1736,7 @@ msgstr "Asiakoodi"
 #. module: account
 #: field:account.config.settings,company_footer:0
 msgid "Bank accounts footer preview"
-msgstr ""
+msgstr "Pankkitilien esikatselu alatunnisteessa"
 
 #. module: account
 #: selection:account.account,type:0
@@ -1762,7 +1767,7 @@ msgstr "Toistuva"
 #. module: account
 #: report:account.invoice:0
 msgid "TIN :"
-msgstr ""
+msgstr "TIN :"
 
 #. module: account
 #: field:account.journal,groups_id:0
@@ -1777,7 +1782,7 @@ msgstr "Veroton"
 #. module: account
 #: view:account.journal:0
 msgid "Advanced Settings"
-msgstr ""
+msgstr "Edistyneet asetukset"
 
 #. module: account
 #: view:account.bank.statement:0
@@ -1955,7 +1960,7 @@ msgstr ""
 #. module: account
 #: view:account.analytic.account:0
 msgid "Pending Accounts"
-msgstr ""
+msgstr "Odottavat tilit"
 
 #. module: account
 #: report:account.journal.period.print.sale.purchase:0
@@ -1969,6 +1974,8 @@ msgid ""
 "If the active field is set to False, it will allow you to hide the journal "
 "period without removing it."
 msgstr ""
+"Jos aktiivinen tili on asetettu tilaan \"epätosi\", se sallii päiväkirjan "
+"kauden piilottamisen poistammatta kuitenkaan sitä."
 
 #. module: account
 #: field:account.report.general.ledger,sortby:0
@@ -1999,7 +2006,7 @@ msgstr "Viimeinen päättävä saldo"
 #. module: account
 #: model:ir.model,name:account.model_account_common_journal_report
 msgid "Account Common Journal Report"
-msgstr ""
+msgstr "Kirjanpidon yleinen päiväkirjaraportti"
 
 #. module: account
 #: selection:account.partner.balance,display_partner:0
@@ -2026,7 +2033,7 @@ msgstr "Asiakkaan Viite:"
 #: help:account.tax.template,ref_tax_code_id:0
 #: help:account.tax.template,tax_code_id:0
 msgid "Use this code for the tax declaration."
-msgstr ""
+msgstr "Käytä tätä koodia veroilmoitukseen"
 
 #. module: account
 #: help:account.period,special:0
@@ -2036,7 +2043,7 @@ msgstr "Nämä kaudet voivat olla päällekkäisiä."
 #. module: account
 #: model:process.node,name:account.process_node_draftstatement0
 msgid "Draft statement"
-msgstr "Luonnostiliote"
+msgstr "Tiliote-ehdotus"
 
 #. module: account
 #: model:mail.message.subtype,description:account.mt_invoice_validated
@@ -2169,6 +2176,8 @@ msgid ""
 "This journal already contains items for this period, therefore you cannot "
 "modify its company field."
 msgstr ""
+"Tämä päiväkirja sisältää jo vientejä kuluvalle kaudelle, tämän vuoksi et voi "
+"enää muokata sen yritys-kenttää."
 
 #. module: account
 #: model:ir.actions.act_window,name:account.action_project_account_analytic_line_form
@@ -2201,7 +2210,7 @@ msgstr ""
 #. module: account
 #: field:account.config.settings,currency_id:0
 msgid "Default company currency"
-msgstr ""
+msgstr "Yrityksen oletusvaluutta"
 
 #. module: account
 #: field:account.invoice,move_id:0
@@ -2269,6 +2278,7 @@ msgid ""
 "You cannot change the type of account to '%s' type as it contains journal "
 "items!"
 msgstr ""
+"Tilityyppiä '%s' ei vii muuttaa, sisällä se sisältää jo päiväkirjavientejä."
 
 #. module: account
 #: model:ir.model,name:account.model_account_aged_trial_balance
@@ -2370,7 +2380,7 @@ msgstr ""
 #. module: account
 #: view:account.analytic.line:0
 msgid "Analytic Journal Items related to a sale journal."
-msgstr ""
+msgstr "Analyyttisiä myynnin päiväkirjavientejä"
 
 #. module: account
 #: selection:account.financial.report,style_overwrite:0
@@ -2383,6 +2393,8 @@ msgid ""
 "If you want the journal should be control at opening/closing, check this "
 "option"
 msgstr ""
+"Jos haluat, että päiväkirjan pitäisi ohjata avaus/päätös-toimintaa, valitse "
+"tämä vaihtoehto"
 
 #. module: account
 #: view:account.bank.statement:0
@@ -2395,7 +2407,7 @@ msgstr ""
 #: selection:account.subscription,state:0
 #: selection:report.invoice.created,state:0
 msgid "Draft"
-msgstr "Luonnos"
+msgstr "Ehdotus"
 
 #. module: account
 #: field:account.move.reconcile,line_partial_ids:0
@@ -2433,7 +2445,7 @@ msgstr "Täsmäytettävät tilit"
 #. module: account
 #: model:process.transition,note:account.process_transition_filestatement0
 msgid "Import of the statement in the system from an electronic file"
-msgstr ""
+msgstr "Lue tiliote järjestelmään tiedostosta."
 
 #. module: account
 #: model:process.node,name:account.process_node_importinvoice0
@@ -2469,7 +2481,7 @@ msgstr "30 päivää netto"
 #: code:addons/account/account_cash_statement.py:256
 #, python-format
 msgid "You do not have rights to open this %s journal !"
-msgstr ""
+msgstr "SInulla ei ole käyttöoikeutta avata tätä %s päiväkirjaa !"
 
 #. module: account
 #: model:res.groups,name:account.group_supplier_inv_check_total
@@ -2498,7 +2510,7 @@ msgstr ""
 #. module: account
 #: view:account.chart.template:0
 msgid "Search Chart of Account Templates"
-msgstr ""
+msgstr "Hae tilikarttamalleista"
 
 #. module: account
 #: report:account.invoice:0
@@ -2544,7 +2556,7 @@ msgstr "Tulotili"
 #. module: account
 #: help:account.config.settings,default_sale_tax:0
 msgid "This sale tax will be assigned by default on new products."
-msgstr ""
+msgstr "Tämä myyntivero on asetettu oletukseksi uusille tuotteille."
 
 #. module: account
 #: report:account.general.ledger_landscape:0
@@ -2634,6 +2646,8 @@ msgid ""
 "You cannot change the type of account from 'Closed' to any other type as it "
 "contains journal items!"
 msgstr ""
+"Et voi muuttaa tilityyppiä \"Suljettu\" muuhun tilaan, sillä se sisltää jo "
+"päiväkirjavientejä!"
 
 #. module: account
 #: field:account.invoice.report,account_line_id:0
@@ -2673,6 +2687,8 @@ msgid ""
 "In order to delete a bank statement, you must first cancel it to delete "
 "related journal items."
 msgstr ""
+"Jotta voit poistaa pankintiliotteen, sinun pitää ensin peruuttaa se, jotta "
+"siihen liittyvät päiväkirjaviennit poistetaan."
 
 #. module: account
 #: field:account.invoice.report,payment_term:0
@@ -2694,7 +2710,7 @@ msgstr "Verokanta"
 #: code:addons/account/account_move_line.py:579
 #, python-format
 msgid "You cannot create journal items on a closed account %s %s."
-msgstr ""
+msgstr "Et vii luoda päiväkirjavientejä suljetulle tilille %s %s."
 
 #. module: account
 #: field:account.period.close,sure:0
@@ -2710,17 +2726,17 @@ msgstr "Suodattimet"
 #: model:process.node,note:account.process_node_draftinvoices0
 #: model:process.node,note:account.process_node_supplierdraftinvoices0
 msgid "Draft state of an invoice"
-msgstr "Laskun luonnostila"
+msgstr "Laskuehdotus"
 
 #. module: account
 #: view:product.category:0
 msgid "Account Properties"
-msgstr ""
+msgstr "Tilin ominaisuudet"
 
 #. module: account
 #: selection:account.invoice.refund,filter_refund:0
 msgid "Create a draft refund"
-msgstr ""
+msgstr "Luo hyvitysehdotus"
 
 #. module: account
 #: view:account.partner.reconcile.process:0
@@ -2742,7 +2758,7 @@ msgstr "Tilin verokoodi"
 #: model:account.payment.term,name:account.account_payment_term_advance
 #: model:account.payment.term,note:account.account_payment_term_advance
 msgid "30% Advance End 30 Days"
-msgstr ""
+msgstr "30% ennakko, loput 30 päivän kuluessa"
 
 #. module: account
 #: view:account.entries.report:0
@@ -2777,7 +2793,7 @@ msgstr "Debettien keskitys"
 #: view:account.invoice.confirm:0
 #: model:ir.actions.act_window,name:account.action_account_invoice_confirm
 msgid "Confirm Draft Invoices"
-msgstr "Vahvista luonnoslaskut"
+msgstr "Vahvista laskuehdotukset"
 
 #. module: account
 #: field:account.entries.report,day:0
@@ -2817,7 +2833,7 @@ msgstr "Pankkitiedot"
 #. module: account
 #: view:account.bank.statement:0
 msgid "Cancel CashBox"
-msgstr ""
+msgstr "Peruuta kassalaatikko"
 
 #. module: account
 #: help:account.invoice,payment_term:0
@@ -2835,7 +2851,7 @@ msgstr ""
 #. module: account
 #: field:account.config.settings,purchase_sequence_next:0
 msgid "Next supplier invoice number"
-msgstr ""
+msgstr "Seuraava ostolaskunumero"
 
 #. module: account
 #: view:account.analytic.cost.ledger.journal.report:0
@@ -3064,7 +3080,7 @@ msgstr "Tiliviennit"
 #. module: account
 #: constraint:account.move.line:0
 msgid "Account and Period must belong to the same company."
-msgstr ""
+msgstr "Tilin ja kauden pitää kuulua samalle yritykselle."
 
 #. module: account
 #: field:account.invoice.line,discount:0
@@ -3090,7 +3106,7 @@ msgstr "Arvonalennuksen määrä"
 #: field:account.bank.statement,message_unread:0
 #: field:account.invoice,message_unread:0
 msgid "Unread Messages"
-msgstr ""
+msgstr "Lukemattomat viestit"
 
 #. module: account
 #: code:addons/account/wizard/account_invoice_state.py:44
@@ -3099,6 +3115,8 @@ msgid ""
 "Selected invoice(s) cannot be confirmed as they are not in 'Draft' or 'Pro-"
 "Forma' state."
 msgstr ""
+"Valittua laskua/laskuja ei vahvistaa, koska ei/eivät ole \"Ehdotus\" tai "
+"\"Proforma\" -tilassa."
 
 #. module: account
 #: code:addons/account/account.py:1071
@@ -3919,7 +3937,7 @@ msgstr "Verotapauksen nimi"
 #: view:account.invoice:0
 #: model:process.node,name:account.process_node_draftinvoices0
 msgid "Draft Invoice"
-msgstr "Luonnoslasku"
+msgstr "Laskuehdotus"
 
 #. module: account
 #: view:account.config.settings:0
@@ -4395,7 +4413,7 @@ msgstr "otsikko"
 #: view:account.invoice:0
 #: view:account.subscription:0
 msgid "Set to Draft"
-msgstr "Aseta luonnokseksi"
+msgstr "Aseta ehdotukseksi"
 
 #. module: account
 #: model:ir.actions.act_window,name:account.action_subscription_form
@@ -4518,7 +4536,7 @@ msgstr "Hae veropohjia"
 #. module: account
 #: model:ir.ui.menu,name:account.periodical_processing_journal_entries_validation
 msgid "Draft Entries"
-msgstr "Viennit luonnostilassa"
+msgstr "Kirjausehdotukset"
 
 #. module: account
 #: help:account.config.settings,decimal_precision:0
@@ -5076,6 +5094,9 @@ msgid ""
 "printed it comes to 'Printed' status. When all transactions are done, it "
 "comes in 'Done' status."
 msgstr ""
+"Kun päiväkirjakausi on luotu, till on \"Ehdotus\". Kun raportti tulostetaan, "
+"niin siitä tulle \"Tulostettu\". Kun kaikki tapahtumat on käsitelty loppuun, "
+"niin tilaksi tulee \"Valmis\"."
 
 #. module: account
 #: code:addons/account/account.py:3205
@@ -5215,7 +5236,7 @@ msgstr "Pankkisuorituksiin käytettävä pankkitiliote"
 #. module: account
 #: model:process.transition,note:account.process_transition_suppliercustomerinvoice0
 msgid "Draft invoices are validated. "
-msgstr "Luonnoslaskut on tarkistettu. "
+msgstr "Laskuehdotukset on vahvistettu. "
 
 #. module: account
 #: code:addons/account/account.py:890
@@ -5822,7 +5843,7 @@ msgstr "Päätösmerkintöjen päiväkirja"
 #. module: account
 #: view:account.invoice:0
 msgid "Draft Refund "
-msgstr ""
+msgstr "Hyvitysehdotus "
 
 #. module: account
 #: view:cash.box.in:0
@@ -5994,7 +6015,7 @@ msgstr "Verokannan malli"
 #. module: account
 #: view:account.invoice:0
 msgid "Draft Refund"
-msgstr ""
+msgstr "Hyvitysehdotus"
 
 #. module: account
 #: view:account.analytic.chart:0
@@ -7037,7 +7058,7 @@ msgstr ""
 #. module: account
 #: model:process.node,note:account.process_node_draftstatement0
 msgid "State is draft"
-msgstr "Tila on luonnos"
+msgstr "Tila on ehdotus"
 
 #. module: account
 #: view:account.move.line:0
@@ -7308,7 +7329,7 @@ msgstr ""
 #, python-format
 msgid ""
 "Selected Entry Lines does not have any account move enties in draft state."
-msgstr ""
+msgstr "Valituilla riveillä ei ole yhtään tilivientiä tilassa ehdotus."
 
 #. module: account
 #: view:account.chart.template:0
@@ -7427,7 +7448,7 @@ msgstr ""
 #. module: account
 #: model:process.transition,note:account.process_transition_invoicemanually0
 msgid "A statement with manual entries becomes a draft statement."
-msgstr ""
+msgstr "Manuaalisia vientejä sisältävä tiliote luodaan tilaan \"Ehdotus\""
 
 #. module: account
 #: view:account.aged.trial.balance:0
@@ -8173,6 +8194,8 @@ msgid ""
 "You cannot delete an invoice which is not draft or cancelled. You should "
 "refund it instead."
 msgstr ""
+"Et voi poistaa laskua, joka ei ole ehdotus tai peruttu. Sen sijaan hyvitä "
+"lasku."
 
 #. module: account
 #: model:ir.ui.menu,name:account.menu_finance_legal_statement
@@ -9159,7 +9182,7 @@ msgstr "Avauspäiväkirja"
 #. module: account
 #: model:process.transition,note:account.process_transition_customerinvoice0
 msgid "Draft invoices are checked, validated and printed."
-msgstr "Luonnoslaskut on tarkistettu, hyväksytty ja tulostettu."
+msgstr "Laskuehdotukset on tarkistettu, vahvistettu ja tulostettu."
 
 #. module: account
 #: field:account.bank.statement,message_is_follower:0
@@ -9363,6 +9386,14 @@ msgid ""
 "related journal entries may or may not be reconciled.             \n"
 "* The 'Cancelled' status is used when user cancel invoice."
 msgstr ""
+" * Tila \"Ehdotus\" on alussa laskulla, kun käyttäjä on luonut uuden "
+"vahvistamattoman laskun.\n"
+"* Tila \"Proforma\" laskulla on, jos sille ei ole luotu laskunumeroa.\n"
+"* Tila \"Avoin\" on käytössä, kun käyttäjä luo laskun ja sille generoidaan "
+"laskunumero. Lasku säilyy avoimena, kunnes se on maksettu.        \n"
+"* Tila \"Maksettu\" asetetaan automaattisesti, kun lasku on maksettu. "
+"Vastaavat päiväkirjaviennit voivat tai eivät olla täsmäytettyjä.    \n"
+"* Tila \"Peruttu\" asetetaan laskulle, kun käyttäjä peruuttaa sen."
 
 #. module: account
 #: field:account.period,date_stop:0
@@ -9865,7 +9896,7 @@ msgstr ""
 #: view:account.invoice.report:0
 #: model:process.node,name:account.process_node_supplierdraftinvoices0
 msgid "Draft Invoices"
-msgstr "Luonnoslaskut"
+msgstr "Laskuehdotukset"
 
 #. module: account
 #. openerp-web
@@ -10048,7 +10079,7 @@ msgstr "Kredit"
 #. module: account
 #: view:account.invoice:0
 msgid "Draft Invoice "
-msgstr ""
+msgstr "Laskuehdotus "
 
 #. module: account
 #: model:ir.ui.menu,name:account.menu_account_general_journal
@@ -10338,7 +10369,7 @@ msgstr "Yhteensä"
 #: code:addons/account/wizard/account_invoice_refund.py:109
 #, python-format
 msgid "Cannot %s draft/proforma/cancel invoice."
-msgstr ""
+msgstr "Ei voi %s laskuehdotusta/proformalaskua/peruutusta."
 
 #. module: account
 #: field:account.tax,account_analytic_paid_id:0
@@ -10450,7 +10481,7 @@ msgstr ""
 #. module: account
 #: model:ir.actions.act_window,name:account.action_bank_statement_draft_tree
 msgid "Draft statements"
-msgstr "Luonnostiliotteet"
+msgstr "Tiliote-ehdotukset"
 
 #. module: account
 #: model:process.transition,note:account.process_transition_statemententries0
