--- a/project/i18n/ja.po
+++ b/project/i18n/ja.po
@@ -8,13 +8,13 @@ msgstr ""
 "Project-Id-Version: openobject-addons\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2013-06-07 19:36+0000\n"
-"PO-Revision-Date: 2013-11-05 05:44+0000\n"
+"PO-Revision-Date: 2013-11-24 05:41+0000\n"
 "Last-Translator: Yoshi Tashiro <yostashiro@gmail.com>\n"
 "Language-Team: Japanese <ja@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2013-11-21 06:28+0000\n"
+"X-Launchpad-Export-Date: 2013-11-24 05:47+0000\n"
 "X-Generator: Launchpad (build 16831)\n"
 
 #. module: project
@@ -117,7 +117,7 @@ msgstr "テスト"
 #. module: project
 #: model:ir.model,name:project.model_account_analytic_account
 msgid "Analytic Account"
-msgstr "分析アカウント"
+msgstr "分析勘定"
 
 #. module: project
 #: field:project.config.settings,group_time_work_estimation_tasks:0
