--- a/stock/i18n/et.po
+++ b/stock/i18n/et.po
@@ -8,13 +8,13 @@ msgstr ""
 "Project-Id-Version: openobject-addons\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2013-06-07 19:36+0000\n"
-"PO-Revision-Date: 2013-11-22 18:32+0000\n"
+"PO-Revision-Date: 2013-11-23 18:41+0000\n"
 "Last-Translator: Ahti Hinnov <sipelgas@gmail.com>\n"
 "Language-Team: Estonian <et@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2013-11-23 06:26+0000\n"
+"X-Launchpad-Export-Date: 2013-11-24 05:47+0000\n"
 "X-Generator: Launchpad (build 16831)\n"
 
 #. module: stock
@@ -2882,7 +2882,7 @@ msgstr "Hankimine"
 #: model:ir.ui.menu,name:stock.menu_action_pdct_out
 #, python-format
 msgid "Deliver Products"
-msgstr "Tarni tooted"
+msgstr "Väljuvad tooted"
 
 #. module: stock
 #: view:stock.location.product:0
@@ -4144,7 +4144,7 @@ msgstr ""
 #: model:ir.actions.act_window,name:stock.action_reception_picking_move
 #: model:ir.ui.menu,name:stock.menu_action_pdct_in
 msgid "Incoming  Products"
-msgstr ""
+msgstr "Sisenevad tooted"
 
 #. module: stock
 #: view:product.product:0
