Launchpad automatic translations update.

--- a/sale/i18n/ro.po
+++ b/sale/i18n/ro.po
@@ -8,13 +8,13 @@ msgstr ""
 "Project-Id-Version: openobject-addons\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2013-06-07 19:36+0000\n"
-"PO-Revision-Date: 2013-11-29 20:13+0000\n"
+"PO-Revision-Date: 2013-11-30 13:11+0000\n"
 "Last-Translator: Dorin <dhongu@gmail.com>\n"
 "Language-Team: Romanian <ro@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2013-11-30 05:31+0000\n"
+"X-Launchpad-Export-Date: 2013-12-01 05:45+0000\n"
 "X-Generator: Launchpad (build 16856)\n"
 
 #. module: sale
@@ -567,7 +567,7 @@ msgid ""
 "              </p>\n"
 "            "
 msgstr ""
-"<clasa p=\"oe_vizualizare_niciuncontinut_creeaza\">\n"
+"<p class=\"oe_view_nocontent_create\">\n"
 "                Clic pentru a crea o ofertă care poate fi transformata într-"
 "o comandă de\n"
 "                vânzare.\n"
@@ -1052,7 +1052,7 @@ msgid ""
 "              </p>\n"
 "            "
 msgstr ""
-"<clasa p=\"oe_vizualizare_niciuncontinut_creeaza\">\n"
+"<p class=\"oe_view_nocontent_create\">\n"
 "                Clic pentru a crea o oferta sau o comanda de vanzare pentru "
 "acest client.\n"
 "              </p><p>\n"
@@ -1094,7 +1094,7 @@ msgid ""
 "              </p>\n"
 "            "
 msgstr ""
-"<clasa p=\"oe_vizualizare_niciuncontinut_creeaza\">\n"
+"<p class=\"oe_view_nocontent_create\">\n"
 "                Clic pentru a defini un nou magazin de vanzare.\n"
 "              </p><p>\n"
 "                Fiecare cotatie sau comanda de vanzare trebuie sa fie "
