--- a/account_voucher/i18n/ro.po
+++ b/account_voucher/i18n/ro.po
@@ -8,14 +8,14 @@ msgstr ""
 "Project-Id-Version: openobject-addons\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2013-06-07 19:36+0000\n"
-"PO-Revision-Date: 2013-03-07 18:21+0000\n"
-"Last-Translator: ERPSystems.ro <Unknown>\n"
+"PO-Revision-Date: 2013-11-30 22:59+0000\n"
+"Last-Translator: Dorin <dhongu@gmail.com>\n"
 "Language-Team: Romanian <ro@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2013-11-21 06:00+0000\n"
-"X-Generator: Launchpad (build 16831)\n"
+"X-Launchpad-Export-Date: 2013-12-01 05:45+0000\n"
+"X-Generator: Launchpad (build 16856)\n"
 
 #. module: account_voucher
 #: field:account.bank.statement.line,voucher_id:0
@@ -36,12 +36,12 @@ msgstr "Pierdere"
 #. module: account_voucher
 #: view:account.voucher:0
 msgid "Payment Ref"
-msgstr "Ref plata"
+msgstr "Ref plată"
 
 #. module: account_voucher
 #: view:account.voucher:0
 msgid "Total Amount"
-msgstr "Suma totala"
+msgstr "Suma totală"
 
 #. module: account_voucher
 #: view:account.voucher:0
@@ -52,7 +52,7 @@ msgstr "Deschide Inregistrarile Clientului in Registru"
 #: view:account.voucher:0
 #: view:sale.receipt.report:0
 msgid "Group By..."
-msgstr "Grupeaza dupa..."
+msgstr "Grupare dupa..."
 
 #. module: account_voucher
 #: help:account.voucher,writeoff_amount:0
