--- a/mrp/i18n/ro.po
+++ b/mrp/i18n/ro.po
@@ -8,14 +8,14 @@ msgstr ""
 "Project-Id-Version: openobject-addons\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2013-06-07 19:36+0000\n"
-"PO-Revision-Date: 2013-04-09 04:55+0000\n"
+"PO-Revision-Date: 2013-11-30 13:20+0000\n"
 "Last-Translator: Dorin <dhongu@gmail.com>\n"
 "Language-Team: Romanian <ro@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2013-11-21 06:21+0000\n"
-"X-Generator: Launchpad (build 16831)\n"
+"X-Launchpad-Export-Date: 2013-12-01 05:45+0000\n"
+"X-Generator: Launchpad (build 16856)\n"
 
 #. module: mrp
 #: help:mrp.config.settings,module_mrp_repair:0
@@ -261,7 +261,7 @@ msgid ""
 "              </p>\n"
 "            "
 msgstr ""
-"<clasa p=\"oe_vizualizare_niciuncontinut_creeaza\">\n"
+"<p class=\"oe_view_nocontent_create\">\n"
 "                Dati clic pentru a crea o rutare (distribuire).\n"
 "              </p><p>\n"
 "                Rutarile va permit sa creati si sa gestionati operatiunile "
@@ -388,7 +388,7 @@ msgid ""
 "              </p>\n"
 "            "
 msgstr ""
-"<clasa p=\"oe_vizualizare_niciuncontinut_creeaza\">\n"
+"<p class=\"oe_view_nocontent_create\">\n"
 "                Dati clic pentru a crea o comanda de productie. \n"
 "              </p><p>\n"
 "                O comanda de productie, bazata pe o lista de materiale, va\n"
@@ -528,7 +528,7 @@ msgid ""
 "              </p>\n"
 "            "
 msgstr ""
-"<clasa p=\"oe_vizualizare_niciuncontinut_creeaza\">\n"
+"<p class=\"oe_view_nocontent_create\">\n"
 "                Dati clic pentru a crea o noua proprietate.\n"
 "              </p><p>\n"
 "                Proprietatile din OpenERP sunt utilizate pentru a selecta "
@@ -811,7 +811,7 @@ msgid ""
 "              </p>\n"
 "            "
 msgstr ""
-"<clasa p=\"oe_vizualizare_niciuncontinut_creeaza\">\n"
+"<p class=\"oe_view_nocontent_create\">\n"
 "                Dati clic pentru a adauga o componenta unei liste de "
 "materiale.\n"
 "              </p><p>\n"
@@ -882,7 +882,7 @@ msgid ""
 "              </p>\n"
 "            "
 msgstr ""
-"<clasa p=\"oe_vizualizare_niciuncontinut_creeaza\">\n"
+"<p class=\"oe_view_nocontent_create\">\n"
 "                Dati clic pentru a adauga un centru de lucru.\n"
 "              </p><p>\n"
 "                Centrele de Lucru va permit sa creati si sa gestionati "
@@ -1072,7 +1072,7 @@ msgid ""
 "              </p>\n"
 "            "
 msgstr ""
-"<clasa p=\"oe_vizualizare_niciuncontinut_creeaza\">\n"
+"<p class=\"oe_view_nocontent_create\">\n"
 "                Dati clic pentru a incepe o noua comanda de productie. \n"
 "              </p><p>\n"
 "                O comanda de productie, bazata pe o lista de materiale, va\n"
@@ -1762,7 +1762,7 @@ msgid ""
 "              </p>\n"
 "            "
 msgstr ""
-"<clasa p=\"oe_vizualizare_niciuncontinut_creeaza\">\n"
+"<p class=\"oe_view_nocontent_create\">\n"
 "                Dati clic pentru a crea un grup de proprietati.\n"
 "              </p><p>\n"
 "                Definiti grupuri specifice de proprietati care pot fi "
@@ -2243,7 +2243,7 @@ msgid ""
 "              </p>\n"
 "            "
 msgstr ""
-"<clasa p=\"oe_vizualizare_niciuncontinut_creeaza\">\n"
+"<p class=\"oe_view_nocontent_create\">\n"
 "                Dati clic pentru a crea o lista de materiale. \n"
 "              </p><p>\n"
 "                Listele de Materiale va permit sa definiti lista de materii\n"
