--- a/account_balance_reporting/i18n/es.po
+++ b/account_balance_reporting/i18n/es.po
@@ -1,26 +1,26 @@
 # Translation of OpenERP Server.
 # This file contains the translation of the following modules:
-#	* account_balance_reporting
+# 	* account_balance_reporting
 #
 msgid ""
 msgstr ""
 "Project-Id-Version: OpenERP Server 5.0.6\n"
 "Report-Msgid-Bugs-To: support@openerp.com\n"
-"POT-Creation-Date: 2009-09-27 08:18+0000\n"
-"PO-Revision-Date: 2011-07-29 22:59+0000\n"
-"Last-Translator: Jordi Esteve (www.zikzakmedia.com) "
-"<jesteve@zikzakmedia.com>\n"
+"POT-Creation-Date: 2013-07-31 07:35+0000\n"
+"PO-Revision-Date: 2013-07-31 09:37+0100\n"
+"Last-Translator: Jesús Martín <jmartin@zikzakmedia.com>\n"
 "Language-Team: \n"
+"Language: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2013-04-20 05:34+0000\n"
-"X-Generator: Launchpad (build 16567)\n"
+"X-Launchpad-Export-Date: 2011-07-30 05:31+0000\n"
+"X-Generator: Launchpad (build 13405)\n"
 
 #. module: account_balance_reporting
-#: field:account.balance.reporting,current_period_ids:0
-msgid "Fiscal year 1 periods"
-msgstr "Periodos ejercicio fiscal 1"
+#: field:account.balance.reporting.line.account,report_line_id:0
+msgid "Report Line"
+msgstr "Línea de informe"
 
 #. module: account_balance_reporting
 #: help:account.balance.reporting.template.line,css_class:0
@@ -28,9 +28,16 @@ msgid "Style-sheet class"
 msgstr "Clase de hoja de estilos"
 
 #. module: account_balance_reporting
-#: constraint:ir.actions.act_window:0
-msgid "Invalid model name in the action definition."
-msgstr "Nombre de modelo no válido en la definición de la acción."
+#: field:account.balance.reporting,template_id:0
+#: field:account.balance.reporting.template.line,report_id:0
+msgid "Template"
+msgstr "Plantilla"
+
+#. module: account_balance_reporting
+#: view:account.balance.reporting:0
+#: view:account.balance.reporting.line:0
+msgid "Fiscal year 1 Details"
+msgstr "Detalles ejercicio fiscal 1"
 
 #. module: account_balance_reporting
 #: selection:account.balance.reporting.template,balance_mode:0
@@ -64,6 +71,16 @@ msgid "Calculate report"
 msgstr "Calcular informe"
 
 #. module: account_balance_reporting
+#: selection:account.balance.reporting.template,balance_mode:0
+msgid "Debit-Credit, reversed with brakets"
+msgstr "Debe-Haber, inverso con paréntesis"
+
+#. module: account_balance_reporting
+#: report:report_account_balance_reporting.generic_non_zero_detailed:0
+msgid "D"
+msgstr "D"
+
+#. module: account_balance_reporting
 #: field:account.balance.reporting.line,notes:0
 msgid "Notes"
 msgstr "Notas"
@@ -95,16 +112,15 @@ msgid "Fiscal year 2"
 msgstr "Ejercicio fiscal 2"
 
 #. module: account_balance_reporting
-#: selection:account.balance.reporting.template,balance_mode:0
-msgid "Debit-Credit, reversed with brakets"
-msgstr "Debe-Haber, inverso con paréntesis"
+#: field:account.balance.reporting.line,current_line_account_ids:0
+#: field:account.balance.reporting.line,previous_line_account_ids:0
+msgid "Line Accounts"
+msgstr "Cuentas de línea"
 
 #. module: account_balance_reporting
 #: help:account.balance.reporting.template.line,code:0
 msgid "Concept code, may be used on formulas to reference this line"
-msgstr ""
-"Código de concepto, puede ser usado en las fórmulas para referenciar esta "
-"línea."
+msgstr "Código de concepto, puede ser usado en las fórmulas para referenciar esta línea."
 
 #. module: account_balance_reporting
 #: help:account.balance.reporting.template.line,sequence:0
@@ -117,21 +133,17 @@ msgid "Negate"
 msgstr "Negar"
 
 #. module: account_balance_reporting
-#: model:ir.model,name:account_balance_reporting.model_account_balance_reporting_template_line
-msgid "account.balance.reporting.template.line"
-msgstr "account.balance.reporting.template.line"
+#: selection:account.balance.reporting.line.account,fiscal_year:0
+msgid "Previous"
+msgstr "Anterior"
 
 #. module: account_balance_reporting
-#: rml:report_account_balance_reporting.generic:0
-#: rml:report_account_balance_reporting.generic_non_zero:0
+#: report:report_account_balance_reporting.generic:0
+#: report:report_account_balance_reporting.generic_detailed:0
+#: report:report_account_balance_reporting.generic_non_zero:0
+#: report:report_account_balance_reporting.generic_non_zero_detailed:0
 msgid "CODE"
 msgstr "CÓDIGO"
-
-#. module: account_balance_reporting
-#: field:account.balance.reporting,template_id:0
-#: field:account.balance.reporting.template.line,report_id:0
-msgid "Template"
-msgstr "Plantilla"
 
 #. module: account_balance_reporting
 #: view:account.balance.reporting:0
@@ -144,8 +156,10 @@ msgid "Confirm"
 msgstr "Confirmar"
 
 #. module: account_balance_reporting
-#: rml:report_account_balance_reporting.generic:0
-#: rml:report_account_balance_reporting.generic_non_zero:0
+#: report:report_account_balance_reporting.generic:0
+#: report:report_account_balance_reporting.generic_detailed:0
+#: report:report_account_balance_reporting.generic_non_zero:0
+#: report:report_account_balance_reporting.generic_non_zero_detailed:0
 msgid "NOTES"
 msgstr "NOTAS"
 
@@ -166,27 +180,32 @@ msgid "State"
 msgstr "Estado"
 
 #. module: account_balance_reporting
+#: field:account.balance.reporting.line.account,debit:0
+#: report:report_account_balance_reporting.generic_detailed:0
+msgid "Debit"
+msgstr "Debe"
+
+#. module: account_balance_reporting
 #: wizard_button:account_balance_reporting.print_wizard,init,print:0
 msgid "Print"
 msgstr "Imprimir"
 
 #. module: account_balance_reporting
-#: field:account.balance.reporting.template,type:0
-msgid "Type"
-msgstr "Tipo"
+#: view:account.balance.reporting:0
+#: view:account.balance.reporting.line:0
+msgid "Fiscal year 2 Details"
+msgstr "Detalles ejercicio fiscal 2"
 
 #. module: account_balance_reporting
 #: help:account.balance.reporting.template,balance_mode:0
 msgid ""
-"Formula calculation mode: Depending on it, the balance is calculated as "
-"follows:\n"
+"Formula calculation mode: Depending on it, the balance is calculated as follows:\n"
 "  Mode 0: debit-credit (default);\n"
 "  Mode 1: debit-credit, credit-debit for accounts in brackets;\n"
 "  Mode 2: credit-debit;\n"
 "  Mode 3: credit-debit, debit-credit for accounts in brackets."
 msgstr ""
-"Modo de cálculo de la fórmula: Dependiendo de éste, el saldo se calcula como "
-"sigue:\n"
+"Modo de cálculo de la fórmula: Dependiendo de éste, el saldo se calcula como sigue:\n"
 "  Modo 0: debe-haber (por defecto);\n"
 "  Modo 1: debe-haber, haber-debe para las cuentas con paréntesis;\n"
 "  Modo 2: haber-debe;\n"
@@ -210,8 +229,7 @@ msgid ""
 "comparing the values of 'accounting concepts' between two fiscal years\n"
 "or a set of fiscal periods.\n"
 "\n"
-"Accounting concepts values can be calculated as the sum of some account "
-"balances,\n"
+"Accounting concepts values can be calculated as the sum of some account balances,\n"
 "the sum of its children, other account concepts or constant values.\n"
 "\n"
 "Generated reports are stored as objects on the server,\n"
@@ -219,48 +237,48 @@ msgid ""
 "(to add notes for example) before printing.\n"
 "\n"
 "The module lets the user add new templates of the reports concepts,\n"
-"and associate them a specific \"XML reports\" (OpenERP RML files for "
-"example)\n"
+"and associate them a specific \"XML reports\" (OpenERP RML files for example)\n"
 "with the design used when printing.\n"
 "So it is very easy to add predefined country-specific official reports.\n"
 "\n"
-"The user interface has been designed to be as much user-friendly as it can "
-"be.\n"
+"The user interface has been designed to be as much user-friendly as it can be.\n"
 "\n"
 "Note: It has been designed to meet Spanish/Spain localization needs,\n"
 "but it might be used as a generic accounting report engine.\n"
 "            "
 msgstr ""
 "\n"
-"El módulo permite al usuario crear informes y plantillas de balances "
-"contables,\n"
-"comparando los valores de 'conceptos contables' entre dos ejercicios "
-"fiscales\n"
+"El módulo permite al usuario crear informes y plantillas de balances contables,\n"
+"comparando los valores de 'conceptos contables' entre dos ejercicios fiscales\n"
 "o un conjunto de periodos fiscales.\n"
 "\n"
-"Los valores de los conceptos contables pueden ser calculados como la suma de "
-"los saldos de algunas cuentas,\n"
+"Los valores de los conceptos contables pueden ser calculados como la suma de los saldos de algunas cuentas,\n"
 "la suma de sus hijos, otros conceptos contables o valores constantes.\n"
 "\n"
 "Los informes generados se almacenan como objetos en el servidor,\n"
 "así que se pueden consultar más tarde o editar\n"
 "(para añadir notas por ejemplo) antes de imprimir.\n"
 "\n"
-"El módulo permite al usuario añadir nuevas plantillas de conceptos "
-"fiscales,\n"
-"y asociarles \"informes XML\" (archivos RML de OpenERP por ejemplo) "
-"específicos\n"
+"El módulo permite al usuario añadir nuevas plantillas de conceptos fiscales,\n"
+"y asociarles \"informes XML\" (archivos RML de OpenERP por ejemplo) específicos\n"
 "con el diseño a usar en la impresión.\n"
-"Así que es muy fácil añadir informes oficiales predefinidos específicos de "
-"un país.\n"
+"Así que es muy fácil añadir informes oficiales predefinidos específicos de un país.\n"
 "\n"
-"La interfaz de usuario ha sido diseñada para ser tan amigable como es "
-"posible.\n"
+"La interfaz de usuario ha sido diseñada para ser tan amigable como es posible.\n"
 "\n"
-"Nota: Ha sido diseñado para cubrir las necesidades de la localización "
-"Española/España,\n"
+"Nota: Ha sido diseñado para cubrir las necesidades de la localización Española/España,\n"
 "pero puede ser usado como un motor de informes contables genérico.\n"
 "            "
+
+#. module: account_balance_reporting
+#: model:ir.model,name:account_balance_reporting.model_account_balance_reporting_template_line
+msgid "account.balance.reporting.template.line"
+msgstr "account.balance.reporting.template.line"
+
+#. module: account_balance_reporting
+#: model:ir.model,name:account_balance_reporting.model_account_balance_reporting
+msgid "account.balance.reporting"
+msgstr "account.balance.reporting"
 
 #. module: account_balance_reporting
 #: field:account.balance.reporting.line,report_id:0
@@ -285,9 +303,9 @@ msgid "Report design"
 msgstr "Diseño del informe"
 
 #. module: account_balance_reporting
-#: constraint:ir.ui.view:0
-msgid "Invalid XML for View Architecture!"
-msgstr "¡XML no válido para la definición de la vista!"
+#: report:report_account_balance_reporting.generic_non_zero_detailed:0
+msgid "C"
+msgstr "H"
 
 #. module: account_balance_reporting
 #: view:account.balance.reporting.template:0
@@ -309,6 +327,20 @@ msgstr "Fecha cálculo"
 #: field:account.balance.reporting,previous_period_ids:0
 msgid "Fiscal year 2 periods"
 msgstr "Periodos ejercicio fiscal 2"
+
+#. module: account_balance_reporting
+#: selection:account.balance.reporting,state:0
+msgid "Canceled"
+msgstr "Cancelado"
+
+#. module: account_balance_reporting
+#: sql_constraint:account.balance.reporting.line:0
+#: sql_constraint:account.balance.reporting.template.line:0
+#: code:addons/account_balance_reporting/account_balance_reporting.py:288
+#: code:addons/account_balance_reporting/account_balance_reporting_template.py:211
+#, python-format
+msgid "The code must be unique for this report!"
+msgstr "El código de este informe debe ser único."
 
 #. module: account_balance_reporting
 #: view:account.balance.reporting.template:0
@@ -339,14 +371,6 @@ msgstr "Nivel 4"
 #: selection:account.balance.reporting,state:0
 msgid "Draft"
 msgstr "Borrador"
-
-#. module: account_balance_reporting
-#: constraint:ir.model:0
-msgid ""
-"The Object name must start with x_ and not contain any special character !"
-msgstr ""
-"¡El nombre del objeto debe empezar con x_ y no contener ningún carácter "
-"especial!"
 
 #. module: account_balance_reporting
 #: help:account.balance.reporting.template.line,name:0
@@ -395,6 +419,12 @@ msgid "System"
 msgstr "Sistema"
 
 #. module: account_balance_reporting
+#: field:account.balance.reporting.line.account,credit:0
+#: report:report_account_balance_reporting.generic_detailed:0
+msgid "Credit"
+msgstr "Haber"
+
+#. module: account_balance_reporting
 #: selection:account.balance.reporting,state:0
 msgid "Processed"
 msgstr "Procesado"
@@ -410,9 +440,9 @@ msgid "Balance mode"
 msgstr "Modo de saldo"
 
 #. module: account_balance_reporting
-#: model:ir.model,name:account_balance_reporting.model_account_balance_reporting_line
-msgid "account.balance.reporting.line"
-msgstr "account.balance.reporting.line"
+#: field:account.balance.reporting.line.account,account_id:0
+msgid "account"
+msgstr "cuenta"
 
 #. module: account_balance_reporting
 #: field:account.balance.reporting.line,code:0
@@ -421,14 +451,19 @@ msgid "Code"
 msgstr "Código"
 
 #. module: account_balance_reporting
+#: field:account.balance.reporting.line.account,fiscal_year:0
+msgid "Fiscal year"
+msgstr "Ejercicio fiscal"
+
+#. module: account_balance_reporting
 #: selection:account.balance.reporting,state:0
 msgid "Done"
 msgstr "Realizado"
 
 #. module: account_balance_reporting
-#: model:ir.model,name:account_balance_reporting.model_account_balance_reporting
-msgid "account.balance.reporting"
-msgstr "account.balance.reporting"
+#: field:account.balance.reporting,current_period_ids:0
+msgid "Fiscal year 1 periods"
+msgstr "Periodos ejercicio fiscal 1"
 
 #. module: account_balance_reporting
 #: view:account.balance.reporting:0
@@ -482,9 +517,19 @@ msgid "Generic balance report"
 msgstr "Informe balance genérico"
 
 #. module: account_balance_reporting
+#: selection:account.balance.reporting.line.account,fiscal_year:0
+msgid "Current"
+msgstr "Actual"
+
+#. module: account_balance_reporting
 #: view:account.balance.reporting.template:0
 msgid "Account balance report templates"
 msgstr "Plantillas informe cuentas anuales"
+
+#. module: account_balance_reporting
+#: model:ir.model,name:account_balance_reporting.model_account_balance_reporting_template
+msgid "account.balance.reporting.template"
+msgstr "account.balance.reporting.template"
 
 #. module: account_balance_reporting
 #: model:ir.ui.menu,name:account_balance_reporting.menu_account_balance_reporting_templates
@@ -497,9 +542,19 @@ msgid "Description"
 msgstr "Descripción"
 
 #. module: account_balance_reporting
+#: field:account.balance.reporting.template,type:0
+msgid "Type"
+msgstr "Tipo"
+
+#. module: account_balance_reporting
 #: view:account.balance.reporting.template.line:0
 msgid "Account balance report template line"
 msgstr "Línea plantilla informe cuentas anuales"
+
+#. module: account_balance_reporting
+#: model:ir.model,name:account_balance_reporting.model_account_balance_reporting_line_account
+msgid "account.balance.reporting.line.account"
+msgstr "account.balance.reporting.line.account"
 
 #. module: account_balance_reporting
 #: field:account.balance.reporting,name:0
@@ -531,39 +586,46 @@ msgid "Values"
 msgstr "Valores"
 
 #. module: account_balance_reporting
-#: model:ir.model,name:account_balance_reporting.model_account_balance_reporting_template
-msgid "account.balance.reporting.template"
-msgstr "account.balance.reporting.template"
+#: model:ir.actions.report.xml,name:account_balance_reporting.report_account_balance_reporting_detailed_default_non_zero
+msgid "Generic detailed balance report (non zero lines)"
+msgstr "Informe detallado balance genérico (sin líneas a cero)"
+
+#. module: account_balance_reporting
+#: report:report_account_balance_reporting.generic_detailed:0
+#: report:report_account_balance_reporting.generic_non_zero_detailed:0
+msgid "]"
+msgstr "]"
 
 #. module: account_balance_reporting
 #: help:account.balance.reporting.template.line,current_value:0
 #: help:account.balance.reporting.template.line,previous_value:0
 msgid ""
-"Value calculation formula: Depending on this formula the final value is "
-"calculated as follows:\n"
+"Value calculation formula: Depending on this formula the final value is calculated as follows:\n"
 "  Empy template value: sum of (this concept) children values.\n"
 "  Number with decimal point (\"10.2\"): that value (constant).\n"
-"  Account numbers separated by commas (\"430,431,(437)\"): Sum of the "
-"account balances\n"
+"  Account numbers separated by commas (\"430,431,(437)\"): Sum of the account balances\n"
 "    (the sign of the balance depends on the balance mode).\n"
-"  Concept codes separated by \"+\" (\"11000+12000\"): Sum of those concepts "
-"values.\n"
+"  Concept codes separated by \"+\" (\"11000+12000\"): Sum of those concepts values.\n"
 msgstr ""
-"Fórmula de cálculo del valor: Dependiendo de esta fórmula el valor final se "
-"calcula como sigue:\n"
+"Fórmula de cálculo del valor: Dependiendo de esta fórmula el valor final se calcula como sigue:\n"
 "  Valor vacío: suma de los valores de los hijos (de este concepto).\n"
 "  Número con punto decimal (\"10.2\"): ese número (constante).\n"
-"  Números de cuentas separados por comas (\"430,431,(437)\"): Suma de los "
-"saldos de las cuentas\n"
+"  Números de cuentas separados por comas (\"430,431,(437)\"): Suma de los saldos de las cuentas\n"
 "    (el signo del saldo depende del modo de saldo).\n"
-"  Códigos de conceptos separados por \"+\" (\"11000+12000\"): Suma de los "
-"valores de dichos conceptos.\n"
+"  Códigos de conceptos separados por \"+\" (\"11000+12000\"): Suma de los valores de dichos conceptos.\n"
 
 #. module: account_balance_reporting
-#: rml:report_account_balance_reporting.generic:0
-#: rml:report_account_balance_reporting.generic_non_zero:0
+#: report:report_account_balance_reporting.generic:0
+#: report:report_account_balance_reporting.generic_detailed:0
+#: report:report_account_balance_reporting.generic_non_zero:0
+#: report:report_account_balance_reporting.generic_non_zero_detailed:0
 msgid "CONCEPT"
 msgstr "CONCEPTO"
+
+#. module: account_balance_reporting
+#: model:ir.model,name:account_balance_reporting.model_account_balance_reporting_line
+msgid "account.balance.reporting.line"
+msgstr "account.balance.reporting.line"
 
 #. module: account_balance_reporting
 #: view:account.balance.reporting.line:0
@@ -575,6 +637,11 @@ msgstr "Línea informe cuentas anuales"
 #: field:account.balance.reporting.template.line,sequence:0
 msgid "Sequence"
 msgstr "Orden"
+
+#. module: account_balance_reporting
+#: model:ir.actions.report.xml,name:account_balance_reporting.report_account_balance_reporting_detailed_generic
+msgid "Generic detailed balance report"
+msgstr "Informe detallado balance genérico"
 
 #. module: account_balance_reporting
 #: wizard_view:account_balance_reporting.print_wizard,init:0
@@ -592,10 +659,17 @@ msgstr "Informe cuentas anuales"
 msgid "Account balance reporting engine"
 msgstr "Motor de informes de balances contables"
 
-#. module: account_balance_reporting
-#: selection:account.balance.reporting,state:0
-msgid "Canceled"
-msgstr "Cancelado"
+#~ msgid "Invalid model name in the action definition."
+#~ msgstr "Nombre de modelo no válido en la definición de la acción."
+
+#~ msgid "Invalid XML for View Architecture!"
+#~ msgstr "¡XML no válido para la definición de la vista!"
+
+#~ msgid ""
+#~ "The Object name must start with x_ and not contain any special character !"
+#~ msgstr ""
+#~ "¡El nombre del objeto debe empezar con x_ y no contener ningún carácter "
+#~ "especial!"
 
 #~ msgid "account.balance.report.template.line"
 #~ msgstr "account.balance.report.template.line"
